# llm-dspy

./: .cursorrules  .gitignore  README.md  api_docs.md  financial_report.md  llm_dspy.py  pyproject.toml
.github/workflows/: test.yml
llm_dspy/: __init__.py  utils.py
llm_dspy/core/: module.py
llm_dspy/rag/: retriever.py
src/llm_dspy/: __init__.py  adapter.py  retrieval.py  utils.py
src/llm_dspy/cli/: __init__.py  commands.py
src/llm_dspy/core/: __init__.py  module.py
src/llm_dspy/rag/: __init__.py  enhanced.py  retriever.py  transformer.py
tests/: test_dspy_command.py  test_dspy_template.py  test_integration.py  test_template.yaml  test_unit.py
tests/cli/: test_command.py  test_options.py
tests/mocks/: dspy_mock.py  llm.py  llm_adapter.py  provider.py
tests/rag/: test_enhanced.py  test_retriever.py  test_rewriter.py  test_transformer.py
