[project]
name = "llm-dspy"
version = "0.1"
description = "Plugin for LLM adding DSPy command support"
dependencies = [
    "llm",
    "dspy-ai"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "click>=8.0",
    "pytest-asyncio>=0.23.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Coverage is opt-in, run with --cov flag when needed
addopts = "-v"

[project.entry-points.llm]
dspy = "llm_dspy"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["llm_dspy"] 